[package]
name = "ugo"
version = "0.1.0"
edition = "2018"
authors = ["ChaiShushan <chaishushan@gmail.com>"]
description = "uGo Compiler"
repository = "https://github.com/chai2010/ugo-rs"
documentation = "https://docs.rs/ugo"
readme = "README.md"
keywords = ["ugo", "compiler"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
