[package]
name = "ugo-builtin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[features]
default = []
ugo_builtin_defs = ["ugo_builtin_defs"]

[dependencies]
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "1.0", features = ["full"], optional = true }