[package]
name = "ugo_builtin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
ugo_builtin_defs = []

[dependencies]
ugo_internal_macros = { path = "../internal_macros"}
